--- a/prjinfox/nbproject/project.properties
+++ b/prjinfox/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/prjinfox.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector-j-9.0.0.jar=C:\\Users\\User\\Downloads\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
+file.reference.rs2xml.jar=C:\\Users\\User\\Downloads\\rs2xml.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.0.0.jar}
+    ${file.reference.mysql-connector-j-9.0.0.jar}:\
+    ${file.reference.rs2xml.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
